[package]
name = "rsp"
version = "0.2.0"
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8"
byteorder = "1.3"
bytes = "0.4"
chrono = "0.4"
dotenv = "0.14"
futures = "0.1"
postgres = { version = "0.15", features = ["with-chrono"] }
rand = "0.7"
regex = "1.3"
reqwest = { version = "0.9", features = ["socks"] }
select = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
