[package]
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"
name = "rsp"
version = "0.3.0"

[dependencies]
# actix = "0.8"
# byteorder = "1.3"
# bytes = "1.0"
# chrono = "0.4"
# deadpool-postgres = "0.9"
dotenv = "0.15"
# futures = "0.3"
netc = {version = "0.6", git = "https://github.com/serbe/netc"}
rand = "0.8"
regex = "1.3"
# serde = {version = "1.0", features = ["derive"]}
# serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.7", features = ["io-util", "sync", "rt-multi-thread", "net"]}
# tokio-postgres = {version = "0.7", features = ["with-chrono-0_4"]}
# tokio-codec = "0.1"
# tokio-io = "0.1"
# tokio-tcp = "0.1"

[dev-dependencies]
# dotenv = "0.15"
# lazy_static = "1.4"
tokio = {version = "1.7", features = ["full"]}
